--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
@@ -18,6 +18,7 @@
     <meta property='og:description' content='{% block og_description %}The map features a collection of studies on autism prevalence around the world. It highlights places where information is available — and places where information is missing.{% endblock %}' />
 
     <meta name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no'>
+    <meta name='csrf-token' content='{% csrf_token %}'>
 
     {% static '' as static_base %}
     <link rel='stylesheet' type='text/css' href='{{ static_base }}{{ style_sheet }}'>
