--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/list.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/list.html
@@ -16,11 +16,11 @@
             <div class='w-full overflow-x-auto'>
                 <table id='studies-table' class='table-fixed'>
                     <!-- <thead class='bg-dark-gray border-b-3 border-tan sticky top-17.7 z-10'> -->
-                    <thead class='bg-dark-gray border-b-3 border-tan z-10'>
+                    <thead class='border-b-3 border-tan z-10'>
                         <tr>
-                            <th scope='col' class='min-w-toggle'></th>
-                            <th scope='col' class='min-w-td1'>YEAR</th>
-                            <th scope='col' class='min-w-td2'>AUTHOR</th>
+                            <th scope='col' class='min-w-toggle sticky left-0 z-11'></th>
+                            <th scope='col' class='min-w-td1 sticky left-13.75 z-11'>YEAR</th>
+                            <th scope='col' class='min-w-td2 sticky left-38.75 z-11'>AUTHOR</th>
                             <th scope='col' class='min-w-td3'>COUNTRY</th>
                             <th scope='col' class='min-w-td4'>AREA</th>
                             <th scope='col'>SAMPLE SIZE</th>
