TTWWW-589: finished trying to get the sticky thead to work for now

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/list.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/list.html
@@ -16,7 +16,7 @@
             <div class='w-full overflow-x-auto'>
                 <table id='studies-table' class='table-fixed'>
                     <!-- <thead class='bg-dark-gray border-b-3 border-tan sticky top-17.7 z-10'> -->
-                    <thead class='border-b-3 border-tan z-10'>
+                    <thead class='border-b-3 border-tan'>
                         <tr>
                             <th scope='col' class='min-w-toggle sticky left-0 z-11'></th>
                             <th scope='col' class='min-w-td1 sticky left-13.75 z-11'>YEAR</th>
