TTWWW-589: fixed issue of row no longer being white when opened and the first column of the opened row not being sticky

--- a/spectrum/autism_prevalence_map/static/autism_prevalence_map/tailwind/tailwind.css
+++ b/spectrum/autism_prevalence_map/static/autism_prevalence_map/tailwind/tailwind.css
@@ -499,7 +499,11 @@
         @apply bg-tan;
     }
     #studies-table_tbody tr:not(.collapsed):not(.bg-tan) {
-        @apply bg-white2 border-med-navy;
+        @apply border-med-navy;
+    }
+    #studies-table_tbody tr:not(.collapsed):not(.bg-tan) td,
+    #studies-table_tbody tr:not(.collapsed):not(.bg-tan) th {
+        @apply bg-white2;
     }
     #studies-table_tbody tr:not(.collapsed):not(.bg-tan) .chevron-down {
         @apply rotate-180;
