--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/about.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/about.html
@@ -1,7 +1,12 @@
 {% extends 'autism_prevalence_map/base.html' %}
 
 {% load static %}
-{% block  title %}Global Autism Prevalence Map_About | The Transmitter {% endblock %}
+{% block title %}How to use the Global Autism Prevalence Map | The Transmitter{% endblock %}
+{% block twitter_title %}How to use the Global Autism Prevalence Map | The Transmitter{% endblock %}
+{% block og_title %}How to use the Global Autism Prevalence Map | The Transmitter{% endblock %}
+{% block description %}Learn how to use The Transmitter’s Global Autism Prevalence Map to explore studies and data on autism prevalence worldwide.{% endblock %}
+{% block twitter_description %}Learn how to use The Transmitter’s Global Autism Prevalence Map to explore studies and data on autism prevalence worldwide.{% endblock %}
+{% block og_description %}Learn how to use The Transmitter’s Global Autism Prevalence Map to explore studies and data on autism prevalence worldwide.{% endblock %}
 {% block page_name %}about{% endblock %}
 
 {% block body_block %}
