--- a/spectrum/autism_prevalence_map/static/autism_prevalence_map/tailwind/tailwind.css
+++ b/spectrum/autism_prevalence_map/static/autism_prevalence_map/tailwind/tailwind.css
@@ -501,4 +501,9 @@
     #studies-table .show a {
         @apply no-underline;
     }
+    @media screen and (max-width: 767px) {
+        [data-page='about'] header {
+            @apply hidden;
+        }
+    }
 }
