TTWWW-593: updated the format of the last updated meta tag based on sams request

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
@@ -6,8 +6,8 @@
     <meta charset='utf-8'>
     <title>{% block title %}Global Autism Prevalence Map | The Transmitter{% endblock %}</title>
     <meta name='description' content='The map features a collection of studies on autism prevalence around the world. It highlights places where information is available — and places where information is missing.'>
-    {% if last_updated_on %}
-    <meta name="revised" content="{{ last_updated_on }}">
+    {% if last_updated_on_meta %}
+    <meta property="article:modified_time" content="{{ last_updated_on_meta }}">
     {% endif %}
     <meta name='author' content=''>
     <meta name='twitter:card' content='summary_large_image'>
