--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
@@ -134,6 +134,8 @@
     let education = '{{ education }}';
     let country = '{{ country }}';
     let continent = '{{ continent }}';
+    let sort_field = '{{ sort_field }}';
+    let sort_order = '{{ sort_order }}';
     const world_atlas = "{% static 'autism_prevalence_map/vendor/data/110m.json' %}";
 </script>
 {% endblock %}
