--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/about.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/about.html
@@ -136,5 +136,7 @@
     let education = '{{ education }}';
     let country = '{{ country }}';
     let continent = '{{ continent }}';
+    let sort_field = '{{ sort_field }}';
+    let sort_order = '{{ sort_order }}';
 </script>
 {% endblock %}
