--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/list.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/list.html
@@ -1,6 +1,7 @@
 {% extends 'autism_prevalence_map/base.html' %} 
 
 {% load static %} 
+{% load svg %}
 {% block  title %}Global Autism Prevalence Map_List | The Transmitter {% endblock %}
 {% block page_name %}list{% endblock %}
 
@@ -19,7 +20,7 @@
                     <thead class='border-b-3 border-tan'>
                         <tr>
                             <th scope='col' class='min-w-toggle sticky left-0 z-11'></th>
-                            <th scope='col' class='min-w-td1 sticky left-13.75 z-11'>YEAR</th>
+                            <th scope='col' class='min-w-td1 sticky left-13.75 z-11'><div><span>YEAR</span><span>{% svg 'icon-sort' %}</span></div></th>
                             <th scope='col' class='min-w-td2 sticky left-38.75 z-11'>AUTHOR</th>
                             <th scope='col' class='min-w-td3'>COUNTRY</th>
                             <th scope='col' class='min-w-td4'>AREA</th>
@@ -68,6 +69,8 @@
     let education = '{{ education }}';
     let country = '{{ country }}';
     let continent = '{{ continent }}';
+    let sort_field = '{{ sort_field }}';
+    let sort_order = '{{ sort_order }}';
     const world_atlas = '{% static "autism_prevalence_map/vendor/data/110m.json" %}';
     const chevron_down = '{% static "autism_prevalence_map/img/icon-chevron-down.svg" %}';
 </script>
