--- a/spectrum/autism_prevalence_map/static/autism_prevalence_map/tailwind/tailwind.css
+++ b/spectrum/autism_prevalence_map/static/autism_prevalence_map/tailwind/tailwind.css
@@ -476,13 +476,10 @@
        @apply translate-y-20;
     }
     #studies-table thead th {
-        @apply bg-dark-gray;
+        @apply bg-dark-gray z-10;
     }
     #studies-table th:not(.min-w-toggle) {
-        @apply align-bottom pt-8.25 pb-4 text-left text-3.5 text-tan font-bold tracking-extra-wide leading-4.25 whitespace-nowrap pr-14;
-    }
-    #studies-table th:not(.min-w-toggle) div {
-        @apply relative flex gap-1;
+        @apply align-bottom pt-8.75 pb-3.5 text-left text-3.5 text-tan font-bold tracking-extra-wide leading-4.25 whitespace-nowrap pr-14;
     }
     #studies-table th:not(.min-w-toggle) span {
         @apply relative;
@@ -491,7 +488,7 @@
         @apply absolute transform -translate-y-0.5 left-0;
     }
     #studies-table td {
-        @apply pr-14;
+        @apply pr-14 pl-1.5;
     }
     #studies-table th:not(.min-w-toggle):last-child {
         @apply pr-6.5;
@@ -529,5 +526,13 @@
     }
     #studies-table .show a {
         @apply no-underline;
+    }
+
+    [data-id='sort-pop']:before {
+        @apply content-empty absolute right-4.7 w-0 h-0 -top-2 border-x-2.5 border-x-transparent border-b-2 border-b-light-navy-2;
+    }
+
+    [data-id='sort-trigger'].text-light-red svg path {
+        @apply fill-light-red;
     }
 }
