--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
@@ -54,7 +54,7 @@
             'region': ['US']
         });
         dataLayer.push({'content_group_id': 'TTmiscellaneous17',
-                        'content_group_name': 'Tools, Microsites and Miscellaneous Resources'}
+                        'content_group_name': 'tools, microsites and miscellaneous resources'}
         );
 
         (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
